hphp/hack/test/typecheck/readonly/prop.php.legacy_decl.exp
File "prop.php", line 24, characters 12-13:
This property returns a readonly value. It must be explicitly wrapped in a readonly expression. (Typing[4412])
  File "prop.php", line 6, characters 19-21:
  The property is defined here.
File "prop.php", line 31, characters 3-12:
Invalid property assignment (Typing[4411])
  File "prop.php", line 31, characters 16-33:
  This expression is readonly
  File "prop.php", line 7, characters 10-12:
  But it's being assigned to a mutable property
File "prop.php", line 33, characters 16-17:
This property returns a readonly value. It must be explicitly wrapped in a readonly expression. (Typing[4412])
  File "prop.php", line 6, characters 19-21:
  The property is defined here.
File "prop.php", line 37, characters 3-12:
Invalid property assignment (Typing[4411])
  File "prop.php", line 37, characters 16-33:
  This expression is readonly
  File "prop.php", line 7, characters 10-12:
  But it's being assigned to a mutable property
